# FOAM

./: README.md  functions_for_gyre.py  functions_for_mesa.py  grid_building_slurm.py  grid_building_vsc.py  grid_building_vsc_multiprocess.py  maximum_likelihood_estimator.py  my_python_functions.py  pyproject.toml  read.py  setup.py
.github/workflows/: deploy-pages.yml  draft-pdf.yml  generate-API.yml
docs/: Configuration.md  Guidelines.md  Index.md  Installation.md  Output.md  Pipeline.md  Plottools.md  Walkthrough.md  _config.yml
docs/API/: foam.html  index.html
foam/: README.md  __init__.py  __main__.py  additional_constraints.py  build_optimised_pattern.py  build_optimized_pattern.py  figures.py  functions_for_gyre.py  functions_for_mesa.py  gmode_rotation_scaling.py  grid_building_slurm.py  grid_building_vsc.py  maximum_likelihood_estimator.py  modelGrid.py  model_grid.py  plot_tools.py  support_functions.py
paper/: paper.bib  paper.md
pipeline/: 1_constuct_pattern.py  2_calculate_likelihood.py  3_spectroClip_AICc.py  5_correlationPlots.py  README.md  example_config.py  pipeline.py  table_bestModels.py
pypulse/: README.md  functions_for_gyre.py  functions_for_mesa.py  grid_building_slurm.py  grid_building_vsc.py  grid_building_vsc_multiprocess.py  maximum_likelihood_estimator.py  my_python_functions.py
templates/: README.md  VSC_submit_GYRE.pbs  VSC_submit_MESA.pbs  gyre_template.in  run_GYRE.sh  run_MESA.sh
tests/: automated-tests.sh  test_build_optimised_pattern.py  test_foam.py  test_functions_for_gyre.py  test_maximum_likelihood_estimator.py  test_support_functions.py
(+72 files in other folders)
