[tool.poetry]
name = "foam"
version = "0.2.0"
description = ""
authors = ["MichielsenM <mathias.michielsen@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.21.2"
h5py = "^3.4.0"
matplotlib = "^3.4.3"
pandas = "^1.3.2"
lmfit = "^1.0.3"
astropy = "^4.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
