[tool.poetry]
name = "foam"
version = "1.0.0"
description = ""
authors = ["MichielsenM <mathias.michielsen@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.21.2"
h5py = "^3.4.0"
matplotlib = "^3.4.3"
pandas = {extras = ["hdf5"], version = "^2.0.0"}
lmfit = "^1.0.3"
astropy = "^5.1.1"
hdfdict = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
tomli = "^2.0.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^14.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
